Fix instruction prompt text for clarity

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p id="quote-text" class="text-xl md:text-2xl lg:text-3xl font-light text-white leading-relaxed text-center"></p>
     </div>
     <p id="instruction-prompt" class="text-xs md:text-sm text-white font-light tracking-wide uppercase">
-      Tap to view the next quote
+      Tap to view the next quote.
     </p>
   </div>
   <script src="js/script.js"></script>
